# rustchain-bounties

./: .cursor-issue-2786-comment.md  .earnbot_last.txt  .env.example  .gitignore  AGENTS.md  AUTODEV_REPORT.md  AUTO_PATCH.md  BCOS.md  BLOG_POST.md  BLOG_POST_GUIDE.md  BOUNTY-747-bounty-verifier.md  BOUNTY.md  BOUNTY_72_SOLUTION.md  BOUNTY_89_SOLUTION.md  BOUNTY_CONTRIBUTION.md  BOUNTY_GUIDELINES.md  BOUNTY_LEDGER.md  BOUNTY_SOLUTION.md  BOUNTY_TEST.md  BRAIN_CONTRIBUTION.md  CHANGELOG.md  CHECKSUMS.txt  CLAIM_13101.md  CLAIM_13107.md  CLAIM_13111.md  CLAIM_13114.md  CLAIM_13116.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  COMPLETED.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_CLAIM.md  DEMO_VIDEO_SCRIPT.md  DOCUMENTATION_72.md  DOCUMENTATION_COMPLETION_SUMMARY.md  DOCUMENTATION_FIXES.md  Dockerfile  FINAL_SUBMISSION_CHECKLIST.md  FIX.md  (+354 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  supply-chain-allowlist.yml
1104-bottube-profile/: PROFILE_PROOF.md
1579-agent-onboarding/: AGENT_PROOF.md
1588-type-hints/: README.md  utils.py
1589-unit-test/: README.md
1589-unit-tests/: README.md  test_utils.py
1591-github-action/: README.md
1592-awesome-list/: AWESOME_SUBMISSION.md
1593-i18n-errors/: errors_zh_CN.json
1596-discord-bot/: README.md  bot.py
1597-telegram-bot/: bot.py
1598-badge/: BADGE_PROOF.md
1598-badge-proof/: BADGE_PROOF.md
1599-dockerfile/: Dockerfile  docker-compose.yml
1599-dockerfile-v2/: docker-compose.yml
1600-web-dashboard/: README.md  index.html
1600-web-dashboard-v2/: README.md
1601-rust-miner-port/: Cargo.toml  README.md
1602-mcp-tool/: README.md
1603-sdk-wrapper/: README.md
1605-contributing/: CONTRIBUTING.md
1606-cli-monitor/: README.md
1606-cli-monitor-v2/: monitor.py
1607-chrome-ext/: README.md  manifest.json
1608-code-comments-v2/: CODE_COMMENTS.md
1609-grafana-dashboard/: README.md  rustchain-dashboard.json
1611-emoji-reactions/: PROOF.md
1612-homebrew-formula/: INSTALL.md  README.md
1614-load-test/: README.md  load_test.py  requirements.txt
1616-mobile-wallet/: App.js  README.md  app.json  package.json
1677-star-share/: PROOF.md
1750-cross-chain-airdrop/: README.md  package.json
1753-mcp-server/: README.md  mcp_server.py
729-bottube-extension/: README.md  manifest.json
753-oembed/: README.md  oembed.py  requirements.txt
AETHER_SOLUTIONS/: issue_2783.md  issue_2819.md  issue_2862.md  issue_2868.md  issue_2890.md  issue_38.md  issue_6931.md  issue_7315.md  issue_753.md
Formula/: bcos.rb  rustchain-miner.rb
addon/: feverdream_order.py
agent_framework/: bounty_claimer.py  meat_finder.py
agent_payments/: __init__.py
agentfolio-mcp-server-patch/: agentfolio_beacon_lookup.patch.js
ai-bounty-hunter/: README.md  SUBMISSION.md  rustchain_agent.py
api/: feed.py  hall_of_fame.py  index.html  trending.py  videos.py
apple2_miner/: Makefile  README.md  hashing_algorithms.s  integration.s  miner.c  sys_mman.h
articles/: cvpr_2026_acceptance.md  how-i-built-ai-agent-rustchain.md
atari2600-miner/: ARCHITECTURE.md  COMPLETION_REPORT.md  Makefile  PR_DESCRIPTION.md  QUICKSTART.md  README.md  SUBMISSION.md  linker.cfg
autonomous-bounty-agent/: README.md  agent.py  earnings_tracker.py  github_scanner.py  pr_builder.py
badges/: README.md  bug-slayers.json  docs-champions.json  top-3-hunters.json  updated-at.json  weekly-growth.json
base-erc20-wrtc/: README.md  hardhat.config.js  package.json
bcos/: badge-generator.html  compare.html  formula.rb
bcos-action/: README.md  action.py  action.yml
bcos-badge-generator/: README.md  index.html
beacon-atlas/: README.md  beacon_chat_fix.py  index.html  nginx.conf
beacon_dashboard/: __init__.py  beacon.py  dashboard.py
besk-miner/: .gitignore  BCOS.md  (+8 more)
fuzz_harness/: .gitignore  Cargo.toml  README.md
fuzz_harness/.github/workflows/: fuzz.yml
fuzz_harness/fuzz_targets/: attestation_fuzzer.rs
mcp-server/: README.md  pyproject.toml  requirements.txt  rustchain_mcp_server.py  server.py  setup.py
mcp-server/rustchain_mcp/: __init__.py  server.py
rustchain-mcp-server/: README.md  lib.rs  main.rs  package-lock.json  package.json  pyproject.toml  rustchain_mcp.py  test.rs  tsconfig.json
rustchain-mcp-server/src/: index.ts  server.py
rustchain-sdk/: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_imports.py
rustchain-sdk/rustchain/: __init__.py  cli.py  client.py  exceptions.py  explorer.py  models.py
rustchain-sdk/tests/: __init__.py  test_client.py  test_models.py
sdk/: README.md  pyproject.toml  setup.py
sdk/bottube-js/: .gitignore  README.md  index.d.ts  index.js  package.json
sdk/bottube-js/examples/: usage.js
sdk/bottube-python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/bottube-python/bottube/: __init__.py
sdk/bottube-python/examples/: usage.py
sdk/bottube-python/tests/: test_bottube.py
sdk/javascript/bottube-sdk/: bottube.d.ts  bottube.js  package.json  test_bottube.js
sdk/js/bottube/: README.md  index.d.ts  index.js  package.json
sdk/python/: README.md  pyproject.toml  setup.py  test_bottube.py
sdk/python/rustchain_sdk/: __init__.py  cli.py  client.py  exceptions.py  wallet.py
sdk/python/rustchain_sdk/bottube/: __init__.py  client.py  exceptions.py
sdk/python/rustchain_sdk/tests/: test_client.py  test_wallet.py
sdk/rustchain/: __init__.py  cli.py  client.py  exceptions.py  explorer.py  models.py
sdk/tests/: test_client.py
submissions/2859-mcp-server/: README.md  pyproject.toml  server.py
submissions/bounty-2297-python-sdk/: README.md  pyproject.toml
submissions/bounty-2297-python-sdk/rustchain/: __init__.py  cli.py  client.py  errors.py  explorer.py  models.py  websocket.py
submissions/bounty-2297-python-sdk/rustchain_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submissions/bounty-2297-python-sdk/tests/: conftest.py  test_cli.py  test_client_async.py  test_client_sync.py  test_errors.py  test_explorer.py  test_models.py  test_websocket.py
(+4582 files in other folders)
