[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain-mcp"
version = "1.0.0"
description = "MCP Server for RustChain blockchain"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sososonia-cyber", email = "sososonia@example.com"}
]
keywords = ["mcp", "rustchain", "blockchain", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
rustchain-mcp = "rustchain_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rustchain_mcp*"]
