[project]
name = "rustchain"
version = "0.1.0"
description = "Python SDK for RustChain"
authors = [
    {name = "OpenClaw Subagent"}
]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.8"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
