[package]
name = "rustchain-miner"
version = "0.1.0"
edition = "2021"
description = "RustChain miner ported to Rust for better performance"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha3 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
