[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain-mcp"
version = "0.1.0"
description = "MCP Server for RustChain — Connect any AI agent to RustChain"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "RustChain", email = "rustchain@example.com"}]
keywords = ["mcp", "model-context-protocol", "rustchain", "ai-agent", "blockchain"]
classifiers = ["Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["mcp>=1.0.0", "pytest"]

[project.urls]
Homepage = "https://github.com/Scottcjn/rustchain-bounties"
Repository = "https://github.com/Scottcjn/rustchain-bounties"
Documentation = "https://github.com/Scottcjn/rustchain-bounties/tree/main/mcp-server"

[project.scripts]
rustchain-mcp = "rustchain_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rustchain_mcp*"]
