[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rustchain-mcp"
version = "1.0.0"
description = "MCP Server for RustChain - Connect AI agents to RustChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0"]

[project.scripts]
rustchain-mcp = "rustchain_mcp:main"
