[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rustchain"
version = "0.1.0"
description = "Python SDK for RustChain — Proof of Antiquity blockchain"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.optional-dependencies]
async = ["httpx>=0.24.0"]

[project.scripts]
rustchain = "rustchain.cli:main"
