[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustchain-mcp"
version = "1.0.0"
description = "MCP server connecting any AI agent to the RustChain blockchain"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "TestAutomaton"}]
keywords = ["mcp", "rustchain", "blockchain", "ai-agent", "depin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
rustchain-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
